; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_mesh_mpm.c_mesh_mpm_fsm_restart.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_mesh_mpm.c_mesh_mpm_fsm_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_supplicant = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.hostapd_data** }
%struct.hostapd_data = type { i32 }
%struct.sta_info = type { i32 }

@plink_timer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wpa_supplicant*, %struct.sta_info*)* @mesh_mpm_fsm_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mesh_mpm_fsm_restart(%struct.wpa_supplicant* %0, %struct.sta_info* %1) #0 {
  %3 = alloca %struct.wpa_supplicant*, align 8
  %4 = alloca %struct.sta_info*, align 8
  %5 = alloca %struct.hostapd_data*, align 8
  store %struct.wpa_supplicant* %0, %struct.wpa_supplicant** %3, align 8
  store %struct.sta_info* %1, %struct.sta_info** %4, align 8
  %6 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %3, align 8
  %7 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.hostapd_data**, %struct.hostapd_data*** %9, align 8
  %11 = getelementptr inbounds %struct.hostapd_data*, %struct.hostapd_data** %10, i64 0
  %12 = load %struct.hostapd_data*, %struct.hostapd_data** %11, align 8
  store %struct.hostapd_data* %12, %struct.hostapd_data** %5, align 8
  %13 = load i32, i32* @plink_timer, align 4
  %14 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %3, align 8
  %15 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %16 = call i32 @eloop_cancel_timeout(i32 %13, %struct.wpa_supplicant* %14, %struct.sta_info* %15)
  %17 = load %struct.hostapd_data*, %struct.hostapd_data** %5, align 8
  %18 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %19 = call i32 @ap_free_sta(%struct.hostapd_data* %17, %struct.sta_info* %18)
  ret void
}

declare dso_local i32 @eloop_cancel_timeout(i32, %struct.wpa_supplicant*, %struct.sta_info*) #1

declare dso_local i32 @ap_free_sta(%struct.hostapd_data*, %struct.sta_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
